2012-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Cube.wrl:
	* Star.wrl:
	* extrude1.wrl:
	* extrude4.wrl:
	* extrude5.wrl:
	* Extrusion.wrl:
	* 2500points.wrl: 

2012-11-08  Holger Seelig  <holger.seelig@yahoo.de>

	* ImageTexture.wrl: 

2012-11-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.wrl: 

2012-11-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.wrl:
	* Viewpoint.wrl: 

2012-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.wrl:
	* Viewpoint.wrl: 

2012-10-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl:
	* PixelTexture.wrl: 

2012-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* bicman.wrl:
	* ImageTexture.wrl: 

2012-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* ImageTexture.wrl: 

2012-10-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Cube.wrl:
	* QuadSphere.wrl:
	* ImageTexture.wrl:
	* TriangleSphere.wrl:
	* bw.png:
	* bwa.png:
	* IndexedFaceSet-QuadSphere.wrl:
	* IndexedFaceSet-TriangleSphere.wrl: 

2012-10-22  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* Library.pidb:
	* Library.mdproj:
	* gift.wrl:
	* A1.png:
	* A1.wrl:
	* E4.wrl:
	* Pixi.png:
	* door.wrl:
	* neon.wrl:
	* Box.wrl:
	* file.wrl:
	* test.wrl:
	* BBox.wrl:
	* silky.wrl:
	* logo.wrl:
	* metal.wrl:
	* glass.wrl:
	* top.wrl:
	* shamrock.wrl:
	* door1.png:
	* sheen.wrl:
	* door2.png:
	* rococo.wrl:
	* UTF8.wrl:
	* README:
	* README:
	* dart.wrl:
	* autumn.wrl:
	* inline.wrl:
	* test-x.wrl:
	* export.wrl:
	* import.wrl:
	* pear.wrl:
	* summer.wrl:
	* spring.wrl:
	* Beethoven.wrl:
	* winter.wrl:
	* xcf.wrl:
	* svg.wrl:
	* king.wrl:
	* pawn.wrl:
	* Script3.wrl:
	* indigo.wrl:
	* Rotor.wrl:
	* texture.wrl:
	* artdeco.wrl:
	* Script2.wrl:
	* tet.wrl:
	* rook.wrl:
	* apple.wrl:
	* spongetri4.wrl:
	* santafee.wrl:
	* PointSet.wrl:
	* tropical.wrl:
	* sgilogo.wrl:
	* cannon.wrl:
	* error.wrl:
	* image.png:
	* image.xcf:
	* SgiLogo.wrl:
	* LayerSet.wrl: