@@ -30,6 +30,8 @@ Transform {
       crossSection [ 1.5 0, 1.44 0.42, 1.38 0.5879, 1.32 0.7125, 1.26 0.8139, 1.2 0.9, 1.14 0.9749, 1.08 1.041, 1.02 1.0998, 0.96 1.1526, 0.9 1.2, 0.84 1.2427, 0.78 1.2812, 0.72 1.3159, 0.66 1.347, 0.6 1.3748, 0.54 1.3994, 0.48 1.4211, 0.42 1.44, 0.36 1.4562, 0.3 1.4697, 0.24 1.4807, 0.18 1.4892, 0.12 1.4952, 0.06 1.4988, 0 1.5, -0.06 1.4988, -0.12 1.4952, -0.18 1.4892, -0.24 1.4807, -0.3 1.4697, -0.36 1.4562, -0.42 1.44, -0.48 1.4211, -0.54 1.3994, -0.6 1.3748, -0.66 1.347, -0.72 1.3159, -0.78 1.2812, -0.84 1.2427, -0.9 1.2, -0.96 1.1526, -1.02 1.0998, -1.08 1.041, -1.14 0.9749, -1.2 0.9, -1.26 0.8139, -1.32 0.7125, -1.38 0.5879, -1.44 0.42, -1.5 0.0012, -1.44 -0.42, -1.38 -0.5879, -1.32 -0.7125, -1.26 -0.8139, -1.2 -0.9, -1.14 -0.9749, -1.08 -1.041, -1.02 -1.0998, -0.96 -1.1526, -0.9 -1.2, -0.84 -1.2427, -0.78 -1.2812, -0.72 -1.3159, -0.66 -1.347, -0.54 -1.3994, -0.48 -1.4211, -0.42 -1.44, -0.36 -1.4562, -0.3 -1.4697, -0.24 -1.4807, -0.18 -1.4892, -0.12 -1.4952, -0.06 -1.4988, 0 -1.5, 0.06 -1.4988, 0.12 -1.4952, 0.18 -1.4892, 0.24 -1.4807, 0.3 -1.4697, 0.36 -1.4562, 0.42 -1.44, 0.48 -1.4211, 0.54 -1.3994, 0.6 -1.3748, 0.66 -1.347, 0.72 -1.3159, 0.78 -1.2812, 0.84 -1.2427, 0.9 -1.2, 0.96 -1.1526, 1.02 -1.0998, 1.08 -1.041, 1.14 -0.9749, 1.2 -0.9, 1.26 -0.8139, 1.32 -0.7125, 1.38 -0.5879, 1.44 -0.42, 1.5 0 ]
       spine [ -4 6 0, -4 5 0, -4 4 0, -4 3 0, -4 2 0, -4 1 0, -4 0 0, -3 -1 0, -2 -1 0, -1 -1 0, 0 -1 0, 1 -1 0, 2 -1 0, 3 -1 0, 4 -1 0, 5 -1 0, 6 0 0, 6 1 0, 6 2 0, 6 3 0, 6 4 0, 6 5 0, 6 5 0, 6 5.5 0, 6 6 0 ]
       solid FALSE
+      beginCap FALSE
+      endCap FALSE
     }
   }
 }
