@@ -2,6 +2,10 @@
 
 META "title" "Extrusion Cube"
 
+Background {
+	skyColor 1 1 1
+}
+
 Viewpoint {
   position -0.5 -0.5 2.59077
   centerOfRotation -0.5 -0.5 0.5
@@ -15,8 +19,10 @@ Group {
     geometry Extrusion {
       creaseAngle 1
       crossSection [ 0 0, 1 0, 1 1, 0 1, 0 0  ]
-      spine [ 0 0 0, 0 -1 0 ]
+      spine [ 0 0 0, 0 2 0 ]
       solid FALSE
+      beginCap FALSE
+      endCap FALSE
     }
   }
 }
