@@ -1,5 +1,11 @@
 2012-11-10  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Cube.wrl:
+	* Achteck.wrl:
+	* 2500points.wrl: 
+
+2012-11-10  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* Cube.wrl:
 	* Star.wrl:
